make image display block to prevent white space below image

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -89,6 +90,7 @@ body {
   background-color: transparent;
   height: 7px;
 }
+
 #text-content::-webkit-scrollbar-thumb {
   background-color: orangered;
 }
@@ -119,4 +121,5 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
 }
